[package]
name = "msas_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
msas_core = { version = "0.1.0", path = "../msas_core" }
msas_reporting = { version = "0.1.0", path = "../msas_reporting" }
msas_scanners = { version = "0.1.0", path = "../msas_scanners" }
num_cpus = "1.17.0"
rayon = "1.11.0"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
